issue ECOSCOM-308 - Broken styles for criteria of elements in the Journal Control

--- a/ecos-base-core-share/source/web/citeck/components/invariants/invariants.css
+++ b/ecos-base-core-share/source/web/citeck/components/invariants/invariants.css
@@ -1183,42 +1183,67 @@
   width: 30%;
 }
 
-.selected-filter-criteria-container table.selected-criteria-list td.predicate-col select.predicate {
-  width: 100%;
-  background-color: white;
-}
-
 .selected-filter-criteria-container table.selected-criteria-list td.value-col {
   width: 35%;
+  position: relative;
 }
 
+.selected-filter-criteria-container table.selected-criteria-list td.predicate-col select.predicate,
 .selected-filter-criteria-container table.selected-criteria-list td.value-col input[type="text"],
-.selected-filter-criteria-container table.selected-criteria-list td.value-col input[type="number"] {
+.selected-filter-criteria-container table.selected-criteria-list td.value-col input[type="number"],
+.selected-filter-criteria-container table.selected-criteria-list td.value-col select {
   width: 100%;
+  background-color: white;
   box-sizing: border-box;
+  padding: 4px 5px;
+}
+
+
+/* date & time */
+
+.selected-filter-criteria-container table.selected-criteria-list td.value-col input[type="text"].date-entry,
+.selected-filter-criteria-container table.selected-criteria-list td.value-col input[type="text"].time-entry {
+  width: 30%;
+}
+
+.selected-filter-criteria-container table.selected-criteria-list td.value-col input[type="text"].time-entry {
+  margin-left: 15px;
+}
+
+.selected-filter-criteria-container table.selected-criteria-list td.value-col .format-info,
+.selected-filter-criteria-container table.selected-criteria-list td.value-col .help-icon,
+.selected-filter-criteria-container table.selected-criteria-list td.value-col .help-text {
+  display: none;
+}
+
+.selected-filter-criteria-container table.selected-criteria-list td.value-col .datepicker {
+  position: absolute;
+  z-index: 10;
+  display: none;
+  margin-top: -1px;
 }
 
 /* object-finder */
-.selected-search-criteria-container table.selected-criteria-list td.value-col .object-finder-items {
+.selected-filter-criteria-container table.selected-criteria-list td.value-col .object-finder-items {
   margin: 0;
   float: left;
   min-height: 26px;
 }
 
-.selected-search-criteria-container table.selected-criteria-list td.value-col .object-finder-items > div {
+.selected-filter-criteria-container table.selected-criteria-list td.value-col .object-finder-items > div {
   margin-top: 3px;
 }
 
-.selected-search-criteria-container table.selected-criteria-list td.value-col .object-finder-items img {
+.selected-filter-criteria-container table.selected-criteria-list td.value-col .object-finder-items img {
   vertical-align: -3px;
 }
 
-.selected-search-criteria-container table.selected-criteria-list td.value-col .show-picker {
+.selected-filter-criteria-container table.selected-criteria-list td.value-col .show-picker {
   float: right;
   clear: none;
 }
 
-.selected-search-criteria-container table.selected-criteria-list td.value-col .show-picker .yui-button button {
+.selected-filter-criteria-container table.selected-criteria-list td.value-col .show-picker .yui-button button {
   line-height: 125%;
 }
 
